More code smells fixed.